--- a/config/database.yml
+++ b/config/database.yml
@@ -5,19 +5,19 @@ default: &default
 
 development:
   <<: *default
-  database: ors_development
+  database: ort_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: ors_test
+  database: ort_test
 
 staging:
   <<: *default
-  database: ors_staging
+  database: ort_staging
 
 production:
   <<: *default
-  database: ors_production
+  database: ort_production
