--- a/config/database.yml
+++ b/config/database.yml
@@ -1,11 +1,12 @@
 default: &default
   adapter: postgresql
   pool: 5
-  timeout: 5000
+  username: postgres
 
 development:
   <<: *default
   database: ort_development
+  timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -13,6 +14,7 @@ development:
 test:
   <<: *default
   database: ort_test
+  timeout: 5000
 
 staging:
   <<: *default
