--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -18,5 +18,18 @@ test:
 
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
-production:
+production: &defaults
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  slack_exception_notification_token: <%= ENV["SLACK_EXCEPTION_NOTIFICATION_TOKEN"] %>
+  slack_exception_notification_webhook_url: <%= ENV["SLACK_EXCEPTION_NOTIFICATION_WEBHOOK_URL"] %>
+
+  mailer:
+    address: <%= ENV["MAILER_ADDRESS_KEY"] || "" %>
+    domain: <%= ENV["MAILER_DOMAIN_KEY"] || "" %>
+    username: <%= ENV["MAILER_USERNAME_KEY"] || "" %>
+    password: <%= ENV["MAILER_PASSWORD_KEY"] || "" %>
+    asset_host: <%= ENV["MAILER_ASSET_HOST_KEY"] || "" %>
+    host: <%= ENV["MAILER_HOST_KEY"] || "" %>
+
+staging:
+  <<: *defaults
