Added smoke test gem and updated rails secrets accordingly

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -20,6 +20,14 @@ test:
 # instead read values from the environment.
 production: &defaults
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  smoke_test:
+    http_header: <%= ENV["SMOKE_HTTP_HEADER"] %>
+    api_token: <%= ENV["SMOKE_API_TOKEN"] %>
+    slack_uri: <%= ENV["SMOKE_SLACK_URI"] %>
+    slack_token: <%= ENV["SMOKE_SLACK_TOKEN"] %>
+    slack_room: <%= ENV["SMOKE_SLACK_ROOM"] %>
+    slack_username: <%= ENV["SMOKE_USERNAME"] %>
+    slack_emoji: <%= ENV["SMOKE_EMOJI"] %>
 
   mailer:
     address: <%= ENV["MAILER_ADDRESS_KEY"] || "" %>
