Added urls for smoke test gem into rails secrets

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -21,6 +21,7 @@ test:
 production: &defaults
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
   smoke_test:
+    urls: <%= ENV["SMOKE_URLS"] %>
     http_header: <%= ENV["SMOKE_HTTP_HEADER"] %>
     api_token: <%= ENV["SMOKE_API_TOKEN"] %>
     slack_uri: <%= ENV["SMOKE_SLACK_URI"] %>
